--- a/main.html
+++ b/main.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Student Table</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+  <table border="1">
+    <tr>
+      <th>Structure</th>
+      <th>Description</th>
+    </tr>
+    <tr>
+      <td>Columns</td>
+      <td>Two columns with headings "Roll number" and "Name"</td>
+    </tr>
+    <tr>
+      <td>Rows</td>
+      <td>At least two rows containing roll numbers and corresponding names</td>
+    </tr>
+  </table>
 
 </body>
-
 </html>
