--- a/main.html
+++ b/main.html
@@ -7,20 +7,26 @@
 </head>
 <body>
 
+    
   <table border="1">
-    <tr>
-      <th>Structure</th>
-      <th>Description</th>
-    </tr>
-    <tr>
-      <td>Columns</td>
-      <td>Two columns with headings "Roll number" and "Name"</td>
-    </tr>
-    <tr>
-      <td>Rows</td>
-      <td>At least two rows containing roll numbers and corresponding names</td>
-    </tr>
+    <thead>
+      <tr>
+        <th>Structure</th>
+        <th>Description</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Columns</td>
+        <td>Two columns with headings "Roll number" and "Name"</td>
+      </tr>
+      <tr>
+        <td>Rows</td>
+        <td>At least two rows containing roll numbers and corresponding names</td>
+      </tr>
+    </tbody>
   </table>
+
 
 </body>
 </html>
